Working on print hiding

--- a/index.html
+++ b/index.html
@@ -103,27 +103,29 @@
                 <div id="syncstatus">Sync Status</div>
             </p>
         </footer>
-       <div id="printCard" class="print">
-            <div class=rowCard>
-                <div><canvas class="qrCard" height=128 width=128></div><div><img class="photoCard"></div>
-            </div>
-            <div class=rowCard>
-                <div><table>
-                    <tr><td>Patient name</td><td>blah blah blblblah</td></tr>
-                    <tr><td>Complaints</td><td></td></tr>
-                    <tr><td>Procedure</td><td></td></tr>
-                    <tr><td>Length</td><td></td></tr>
-                    <tr><td>Surgeon</td><td></td></tr>
-                    <tr><td>Surgical class</td><td></td></tr>
-                </table></div>
-                <div><table>
-                    <tr><td>Age</td><td></td></tr>
-                    <tr><td>Sex</td><td></td></tr>
-                    <tr><td>Weight</td><td></td></tr>
-                    <tr><td>Allergies</td><td></td></tr>
-                    <tr><td>Meds</td><td></td></tr>
-                    <tr><td>Equipment</td><td></td></tr>
-                </table></div>
+        <div class="print">
+            <div id="printCard">
+                <div class=rowCard>
+                    <div><canvas class="qrCard" height=128 width=128></div><div><img class="photoCard"></div>
+                </div>
+                <div class=rowCard>
+                    <div><table>
+                        <tr><td>Patient name</td><td>blah blah blblblah</td></tr>
+                        <tr><td>Complaints</td><td></td></tr>
+                        <tr><td>Procedure</td><td></td></tr>
+                        <tr><td>Length</td><td></td></tr>
+                        <tr><td>Surgeon</td><td></td></tr>
+                        <tr><td>Surgical class</td><td></td></tr>
+                    </table></div>
+                    <div><table>
+                        <tr><td>Age</td><td></td></tr>
+                        <tr><td>Sex</td><td></td></tr>
+                        <tr><td>Weight</td><td></td></tr>
+                        <tr><td>Allergies</td><td></td></tr>
+                        <tr><td>Meds</td><td></td></tr>
+                        <tr><td>Equipment</td><td></td></tr>
+                    </table></div>
+                </div>
             </div>
         </div>
         <!-- pouchdb -->
