--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <button type="button" class="divbutton" onclick="savePatient()" id="saveeditpatient">Save</button>
                         <button type="button" class="divbutton return" onclick="showPatientOpen()">Cancel</button>
                     </div>
+                    <div class="InvalidPatient pageOverlay">
+                        <button type="button" class="divbutton return" onclick="showPatientList()">Return</button>
+                    </div>
                     <div class="CommentList pageOverlay">
                         <button class="createthecomment libutton divbutton" type="button" onclick="showCommentNew()">New Comment</button>
                         <button class="createtheimage libutton divbutton" type="button" onclick="quickImage()" title="Quick picture">&#128247;</button>
@@ -44,6 +47,12 @@
             </div>
             <div class="PatientEdit pageOverlay">
                 <div id="PatientEditContent" ></div>
+            </div>
+            <div class="InvalidPatient pageOverlay">
+                <div id="InvalidPatientContent" >
+                    <H2>Not a valid patient ID</H2>
+                    <p>Possble causes include your data not yet synced, or changes since this patient was selected</p>
+                </div>
             </div>
             <div class="CommentList pageOverlay">
                 <div id="CommentListContent" ></div>
