--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
         <div class="print_class">
             <div id="printCard">
                 <div class=rowCard>
-                    <div><canvas class="qrCard" height=200 width=200></div><div><img class="photoCard"></div>
+                    <div><img class="photoCard" height=180 width=180></div>
+                    <div><canvas class="qrCard" height=180 width=180></canvas></div>
                 </div>
                 <div class=rowCard>
                     <div><table>
@@ -127,6 +128,8 @@
                         <tr><td>Surgeon</td><td></td></tr>
                         <tr><td>Surgical class</td><td></td></tr>
                     </table></div>
+                </div>
+                <div class=rowCard>
                     <div><table>
                         <tr><td>Age</td><td></td></tr>
                         <tr><td>Sex</td><td></td></tr>
