--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,14 @@
+<html lang="en">
+    <head class="screen">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <link rel="stylesheet" href="style1.css">
+
+</head>
+<body>
 <main>
   <h2>CSS Tabs</h2>
-  <input id="tab1" type="radio" name="tabs" checked>
+  <input id="tab1" type="radio" name="tabs" checked onclick="X(this)">
   <label for="tab1">Home</label>
   <input id="tab2" type="radio" name="tabs">
   <label for="tab2">Away</label>
@@ -25,3 +33,14 @@
     <p>Vivamus convallis lectus lobortis dapibus ultricies. Sed fringilla vitae velit id rutrum. Maecenas metus felis, congue ut ante vitae, porta cursus risus. Nulla facilisi. Praesent vel ligula et erat euismod luctus. Etiam scelerisque placerat dapibus. Vivamus a mauris gravida urna mattis accumsan. Duis sagittis massa vel elit tincidunt, sed molestie lacus dictum. Mauris elementum, neque eu dapibus gravida, eros arcu euismod metus, vitae porttitor nibh elit at orci. Vestibulum laoreet id nulla sit amet mattis.</p>
   </section>
 </main>
+</body>
+<script>
+    function X(e) {
+        console.log(e);
+        Array.from( document.getElementsByName("tabs") ).forEach( function (t)
+        {
+            console.log(t.checked);
+        };
+    }
+</script>
+</html>
