--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head class="screen">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>MissionDB -- Medical Mission Database</title>
+        <title>Medical Mission Database</title>
         <link rel="shortcut icon" type="image/png" href="images/missiondb.png"/>
         <link rel="stylesheet" href="style/base.css">
+        <link rel="manifest" href="/manifest.json">
     </head>
     <body>
         <header class="screen">
