Fix patient select

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </div>
             <div class="PatientNew pageOverlay">
                 <div id="PatientNewContent" >
-                    <label>First name: <input type="text" id="newFirst" onInput="checkNew()" x-webkit-speech></label><br>
-                    <label>Last name: <input type="text" id="newLast" onInput="checkNew()" x-webkit-speech></label><br>
+                    <label>First name: <input type="text" id="newFirst" value="" onInput="checkNew()" x-WebKit-speech /></label><br>
+                    <label>Last name: <input type="text" id="newLast" onInput="checkNew()" x-webkit-speech /></label><br>
                     <label>Date of birth: <input type="date" id="newDOB" onInput="checkNew()"></label>
                 </div>
             </div>
