--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </div>
             <div class="PatientNew pageOverlay">
                 <div id="PatientNewContent" >
-                    <label>First name: <input type="text" id="newFirst" value="" onInput="checkNew()" x-WebKit-speech /></label><br>
-                    <label>Last name: <input type="text" id="newLast" onInput="checkNew()" x-webkit-speech /></label><br>
+                    <label>First name: <input type="text" id="newFirst" value="" onInput="checkNew()"></label><br>
+                    <label>Last name: <input type="text" id="newLast" onInput="checkNew()"></label><br>
                     <label>Date of birth: <input type="date" id="newDOB" onInput="checkNew()"></label>
                 </div>
             </div>
@@ -95,20 +95,6 @@
         </section>
         <div id="templates" class="pageOverlay">
             <div class="editToolbar">
-                <!---
-                <button type="button" onclick="tbarFunc('bold')"><span><B>B</B></span></button>
-                <button type="button" onclick="tbarFunc('italic')"><span><I>I</I></span></button>
-                <button type="button" onclick="tbarFunc('underline')"><span><u>u</u></span></button>
-                <button type="button" onclick="tbarFunc('strikethrough')"><span><del>S</del></span></button>
-                <button type="button" onclick="tbarFunc('insertunorderedlist')"><span>List</span></button>
-                <button type="button" onclick="tbarFunc('indent')" title="Indent"><span><B>&#10503;</B></span></button>
-                <button type="button" onclick="tbarFunc('outdent')" title="Outdent"><span><B>&#10502;</B></span></button>
-                <button type="button" onclick="tbarFunc('justifyleft')" title="Justify left"><span><B>&#8676;</B></span></button>
-                <button type="button" onclick="tbarFunc('justifycenter')" title="Justify center"><span><B>&#8697;</B></span></button>
-                <button type="button" onclick="tbarFunc('justifyright')" title="Justify right"><span><B>&#8677;</B></span></button>
-                <button type="button" onclick="tbarFunc('justifyfull')" title="Justify both"><span><B>&#8633;</B></span></button>
-                &nbsp;
-                --->
                 <button type="button" onclick="editBar.saveedit()"><span><B>Save</B></span></button>
                 <button type="button" onclick="commentCancel()"><span><B>Cancel</B></span></button>
                 <button type="button" onclick="editBar.getImage()" title="Get image"><span><B>&#128247;</B></span></button>            
