more refactoring -- may have made some replacement errors

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="CommentNew pageOverlay">
                 <div id="CommentNewContent">
-                    <img id="CommentNewImage" class="fullimage">
+                    <img id="CommentNewImage" class="entryfield_image">
                     <label for="CommentNewText" id="CommentNewLabel"></label>
                     <div id="CommentNewText" class="editable"></div>
                 </div>
@@ -85,7 +85,7 @@
             </div>
             <div class="CommentImage2 pageOverlay">
                 <div id="CommentImage2Content" ></div>
-                <img id="imageCheck" class="fullimage">
+                <img id="imageCheck" class="entryfield_image">
 
                 <label for="annotation">Image comments (optional)</label>
                 <div id="annotation" class="editable"></div>
