--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Medical Mission Database</title>
-        <link rel="shortcut icon" type="image/png" href="images/missiondb.png"/>
+        <link rel="shortcut icon" type="image/png" href="images/missiondb64.png"/>
         <link rel="stylesheet" href="style/base.css">
         <link rel="manifest" href="/manifest.json">
     </head>
