--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div id="templates" class="pageOverlay">
             <div class="editToolbar">
                 <button type="button" onclick="editBar.saveedit()"><span><B>Save</B></span></button>
-                <button type="button" onclick="commentCancel()"><span><B>Cancel</B></span></button>
+                <button type="button" onclick="editBar.existing2show()"><span><B>Cancel</B></span></button>
                 <button type="button" onclick="editBar.getImage()" title="Get image"><span><B>&#128247;</B></span></button>            
                 <button type="button" onclick="editBar.removeImage()" class="tbarxpic" title="Remove image"><span><B>&#128473;&#128247;</B></span></button>
                 <button type="button" onclick="editBar.deleteedit()" class="tbardel delete" title="Delete comment"><span><B>Delete</B></span></button>
