--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                     </div>
                 </div>
             </div>
+            <div id="titlebox">
+            </div>
         </header>
         <section id="missiondbody" class="screen">
             <div class="PatientList pageOverlay">
