--- a/index1.html
+++ b/index1.html
@@ -8,27 +8,33 @@
 <body>
 <main>
   <h2>CSS Tabs</h2>
-  <input id="tab1" type="radio" name="tabs" checked onclick="X(this)">
-  <label for="tab1">Home</label>
-  <input id="tab2" type="radio" name="tabs">
-  <label for="tab2">Away</label>
-  <input id="tab3" type="radio" name="tabs">
-  <label for="tab3">Samples</label>
-  <input id="tab4" type="radio" name="tabs">
-  <label for="tab4">About</label>
-  <section id="content1">
+  <input id="tab_picture" type="radio" name="tabs" checked onclick="X(this)">
+  <label for="tab_picture" class="tabs">Picture</label>
+  <input id="tab_demo" type="radio" name="tabs">
+  <label for="tab_demo" class="tabs">Demographics</label>
+  <input id="tab_medical" type="radio" name="tabs">
+  <label for="tab_medical" class="tabs">Medical</label>
+  <input id="tab_procedures" type="radio" name="tabs">
+  <label for="tab_procedures" class="tabs">Procedures</label>
+  <input id="tab_comments" type="radio" name="tabs">
+  <label for="tab_comments" class="tabs">Comments</label>
+  <section id="Content_picture">
     <h3>Some Info</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed facilisis adipiscing risus, porttitor viverra urna condimentum et. Donec vestibulum lacus vel dolor dictum pellentesque. Aliquam sodales sem quis urna condimentum, sit amet elementum magna semper.</p>
   </section>
-  <section id="content2">
+  <section id="Content_demo">
     <h3>Something</h3>
     <p>Aliquam condimentum hendrerit nisi, nec vestibulum mi feugiat ut. Donec lobortis nisi neque, in egestas eros venenatis eu. Vestibulum nulla nisi, venenatis at pretium id, fermentum quis risus. Quisque porta suscipit neque eu placerat. Etiam scelerisque, quam in sodales iaculis, velit velit mattis nunc, quis dapibus massa elit nec enim. Vivamus quis libero aliquam, volutpat nisl sed, consectetur ante. Donec aliquam semper felis, in placerat leo blandit in. Integer interdum elit quis felis tempor venenatis. In faucibus ac mauris id commodo. Proin in sapien tincidunt, luctus mi id, bibendum dui. Nunc tincidunt libero ut purus vehicula, sit amet tincidunt mi sollicitudin. Donec varius erat magna, sed convallis purus adipiscing ut. Duis sagittis ut leo ut auctor. Ut convallis nisl nec purus sollicitudin, nec iaculis felis rutrum. </p>
   </section>
-  <section id="content3">
+  <section id="Content_medical">
     <h3>Heading Text</h3>
     <p>Fusce pulvinar porttitor dui, eget ultrices nulla tincidunt vel. Suspendisse faucibus lacinia tellus, et viverra ligula. Suspendisse eget ipsum auctor, congue metus vel, dictum erat. Aenean tristique euismod molestie. Nulla rutrum accumsan nisl, ac semper sapien tincidunt et. Praesent tortor risus, commodo et sagittis nec, aliquam quis augue. Aenean non elit elementum, tempor metus at, aliquam felis.</p>
   </section>
-  <section id="content4">
+  <section id="Content_procedures">
+    <h3>Here Are Many Words</h3>
+    <p>Vivamus convallis lectus lobortis dapibus ultricies. Sed fringilla vitae velit id rutrum. Maecenas metus felis, congue ut ante vitae, porta cursus risus. Nulla facilisi. Praesent vel ligula et erat euismod luctus. Etiam scelerisque placerat dapibus. Vivamus a mauris gravida urna mattis accumsan. Duis sagittis massa vel elit tincidunt, sed molestie lacus dictum. Mauris elementum, neque eu dapibus gravida, eros arcu euismod metus, vitae porttitor nibh elit at orci. Vestibulum laoreet id nulla sit amet mattis.</p>
+  </section>
+  <section id="Content_Comments">
     <h3>Here Are Many Words</h3>
     <p>Vivamus convallis lectus lobortis dapibus ultricies. Sed fringilla vitae velit id rutrum. Maecenas metus felis, congue ut ante vitae, porta cursus risus. Nulla facilisi. Praesent vel ligula et erat euismod luctus. Etiam scelerisque placerat dapibus. Vivamus a mauris gravida urna mattis accumsan. Duis sagittis massa vel elit tincidunt, sed molestie lacus dictum. Mauris elementum, neque eu dapibus gravida, eros arcu euismod metus, vitae porttitor nibh elit at orci. Vestibulum laoreet id nulla sit amet mattis.</p>
   </section>
@@ -40,7 +46,7 @@
         Array.from( document.getElementsByName("tabs") ).forEach( function (t)
         {
             console.log(t.checked);
-        };
+        });
     }
 </script>
 </html>
