More work on tabs

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div id="titlebox">
             </div>
         </header>
-        <section id="missiondbody" class="screen">
+        <div id="missiondbody" class="screen">
             <div class="PatientList pageOverlay">
                 <div id="PatientListContent" ></div>
             </div>
@@ -94,7 +94,7 @@
                 <button type="button" class="divbutton" onclick="saveImage()">Save</button>
                 <button type="button" class="divbutton" onclick="showCommentList()">Cancel</button>
             </div>
-        </section>
+        </div>
         <div id="templates" class="pageOverlay">
             <div class="editToolbar">
                 <button type="button" onclick="editBar.saveedit()"><span><B>Save</B></span></button>
