--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div id="PatientPhotoContent" >
 					<img id="PatientPhotoPhoto" class="entryfield_image">
 					<div class="entryfield_text">
-						<button class="editthecomment libutton" type="button">Edit</button>
+						<button class="editthecomment libutton" type="button" onClick="photoBar.startedit()">Edit</button>
 						Patient Photo
 					</div>
                 </div>
@@ -132,6 +132,13 @@
                 <button type="button" onclick="editBar.removeImage()" class="tbarxpic" title="Remove image"><span><B>&#128473;&#128247;</B></span></button>
                 <button type="button" onclick="editBar.deleteedit()" class="tbardel delete" title="Delete comment"><span><B>Delete</B></span></button>
                 <input type="file" accept="image/*" class="imageBar" onchange="editBar.handleImage()" capture="environment">
+            </div>
+            <div class="photoToolbar">
+                <button type="button" onclick="photoBar.saveedit()"><span><B>Save</B></span></button>
+                <button type="button" onclick="photoBar.existing2show()"><span><B>Cancel</B></span></button>
+                <button type="button" onclick="photoBar.getImage()" title="Get image"><span><B>&#128247;</B></span></button>            
+                <button type="button" onclick="photoBar.removeImage()" class="tbarxpic" title="Remove image"><span><B>&#128473;&#128247;</B></span></button>
+                <input type="file" accept="image/*" class="imageBar" onchange="photoBar.handleImage()" capture="environment">
             </div>
             <button class="editthecomment libutton" type="button">Edit</button>
         </div>
